Fix truncation of long hostnames. 'text-overflow: ellipsis' also requires 'overflow: hidden'. Fixes #58.

--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@
   overflow-x: auto; }
 #vmmap .name {
   font-decoration: italic;
+  overflow: hidden;
   text-overflow: ellipsis;
   word-wrap: break-word;
   height: 1.2em;
