--- a/scss/vmmap.scss
+++ b/scss/vmmap.scss
@@ -32,6 +32,7 @@
     }
     .name {
         font-decoration: italic;
+        overflow: hidden;
         text-overflow: ellipsis;
         word-wrap: break-word;
         height: 1.2em;
